# PicoRC

./: .gitmodules  README.md  serial_monitor.sh
buggy/: .clang-format  CMakeLists.txt  main.c  renderer.c  sdkconfig.h  shared_config.h  state.h
buggy/defines/: config.h
buggy/modules/engines/: engines.c  engines.h
buggy/modules/lights/: lights.c  lights.h
firetruck/: CMakeLists.txt  main.c  rc_platform.c  renderer.c  renderer.h  shared_config.h  state.h
firetruck/data/: firetruck_siren.h  horn_mp3.h  loop_a_mp3.h  loop_b_mp3.h
firetruck/defines/: config.h
firetruck/modules/emergency_leds/: emergency_leds.c  emergency_leds.h
firetruck/modules/engine/: main_engine.c
firetruck/modules/engines/: engines.c  engines.h
firetruck/modules/sound/: sound.c  sound.h
hummer/: CMakeLists.txt  main.c  rc_platform.c  renderer.c  renderer.h  sdkconfig.h  state.c  state.h
hummer/defines/: config.h
hummer/modules/engines/: engines.c
hummer/modules/lights/: lights.c  lights.h
skeleton/: .clang-format  CMakeLists.txt  main.c  rc_platform.c  renderer.c  renderer.h  sdkconfig.h  shared_config.h  state.h  utils.c  utils.h
skeleton/defines/: config.h
skeleton/modules/engine/: main_engine.c  main_engine.h  turret_rotation.c  turret_rotation.h
src/: CMakeLists.txt  main.c
src/defines/: config.h
tank/: CMakeLists.txt  main.c  rc_platform.c  renderer.c  shared_config.h  state.c  state.h
tank/defines/: config.h
tank/modules/engine/: main_engine.c  main_engine.h  turret_ctrl.c  turret_ctrl.h  turret_rotation.c
